--- a/index.html
+++ b/index.html
@@ -34,101 +34,55 @@
     <div class="profile">
 
       <h2>Hello!.</h2>
-      <p class="intro"> I'm Shivansh Shukla, from Gwalior , MP. I am a creative, time punctual,
+      <h2> I'm Shivansh Shukla, from Gwalior , MP. I am a creative, time punctual,
         dedicated, goal-oriented individual with decent moral Values and Ethicates along with a high-energy level, honed
         communication skills, strong organizational skills, and meticulous attention to detail. I am pursuing my
         Bachelors from VIT-BHOPAL in Computer Science and Engineering (2020-ongoing) my current GPA is 8.11 out of 10.
 
-      </p>
+      </h2>
 
     </div>
-
-    <div class="skills">
-      <h2 class="skill">My Domains.</h2>
-      <div class="skill-row">
-        <img class="img1" src="images/computer.png" alt="">
-        <h3>Design & Devlopment</h3>
-        <p class="design">I am paissonate about Website Devlopment specializing in React and paissonate about
-          Data-Structure and algorithm.</p>
-      </div>
-      <div class="skill-row">
-        <img class="img2" src="images/dsa_image.webp" alt="">
-        <h3>Data-Structure and Algorithm</h3>
-        <p class="chilli">Doing Data-Structure is my passion and seeing green-tick every time I solve a problem is my
-          drugs that helped me survie the engineerning and it's vast curriculum</p>
-      </div>
-    </div>
-
-
-
-
-
-
-
-
-
-
-    <div class="skills">
-      <h2 class="skill">My Projects.</h2>
-      <div class="skill-row">
-        <img class="img1" src="images/2.jpeg" alt="">
-        <a href="https://github.com/shivanshshukla021/BLACK-JACK-CARD-GAME" target="_blank">Black Jack Card Game</a>
-        <p class="design">A terminal based game using JAVA OOPS </p>
-      </div>
-      <div class="skill-row">
-        <img class="img2" src="images/5.jpeg" alt="">
-        <a href="https://github.com/shivanshshukla021?tab=repositories" target="_blank">Animal Healthcare</a>
-        <p class="chilli">Animal healthcare is an environment for animals that helps us to provide all the facilities to
-          animals at one place.</p>
-      </div>
-    </div>
-
-
-
-    <div class="skills">
-
-      <div class="skill-row">
-        <img class="img1" src="images/3.png" alt="">
-        <a href="https://github.com/shivanshshukla021/whatsApp-nitify" target="_blank">WharsApp Remainder App</a>
-        <p class="design">Created a reminder app where you can add a reminder on a particular time</p>
-      </div>
-      <div class="skill-row">
-        <img class="img2" src="images/4.jpeg" alt="">
-        <a href="https://drive.google.com/drive/folders/1Iw7-B2BsUpp8jFTOulUgOiUp2McXpbal?usp=sharing"
-          target="_blank">Live News</a>
-        <p class="chilli"> Live news that is directly from Times Of India server</p>
-      </div>
-    </div>
-
-
-    <div class="skill-row">
-      <img class="img1" src="images/5.png" alt="">
-      <a href="https://github.com/shivanshshukla021/OnlineFOOD-MERN-" target="_blank">Online Food Delivery App</a>
-      <p class="design">Created an online food delivery app using MERN STACK where one can order online food</p>
-    </div>
-
-    <div class="skills">
-      <h2 class="skill">INTERNSHIP</h2>
-      <div class="skill-row">
-        <img class="img1" src="images/8.jpeg" alt="">
-        <h3>NIC Delhi</h3>
-        <p class="design">Worked on JAN PARICHAY MERIPEHCHANOV.IN </p>
-        <img src="images/6.png" alt="">
-      </div>
-
-
-
+    <div class="do">
       <div class="skills">
-        <h2 class="skill">Skills</h2>
+        <h2 class="skill">My Domains.</h2>
         <div class="skill-row">
-          <img class="img2" src="images/10.png" alt="">
-          JAVA
-
+          <img class="img1" src="images/computer.png" alt="">
+          <h1>Design & Devlopment</h1>
+          <h2>I am paissonate about Website Devlopment specializing in React and paissonate about
+            Data-Structure and algorithm.</h2>
         </div>
         <div class="skill-row">
-          <img class="img2" src="images/11.png" alt="">
-          HTLM/CSS/JAVASCRIPT
+          <img class="img2" src="images/dsa_image.webp" alt="">
+          <h1>Data-Structure and Algorithm</h1>
+          <h2>Doing Data-Structure is my passion and seeing green-tick every time I solve a problem is my
+            drugs that helped me survie the engineerning and it's vast curriculum</h2>
+        </div>
+      </div>
+    </div>
 
+
+
+
+
+
+
+
+
+    <div class="pro">
+      <div class="skills">
+        <h2 class="skill">My Projects.</h2>
+        <div class="skill-row">
+          <img class="img1" src="images/2.jpeg" alt="">
+          <h1> <a href="https://github.com/shivanshshukla021/BLACK-JACK-CARD-GAME" target="_blank">Black Jack Card
+              Game</a></h1>
+          <h2>A terminal based game using JAVA OOPS </h2>
+        </div>
+        <div class="skill-row">
+          <img class="img2" src="images/5.jpeg" alt="">
+          <h1> <a href="https://github.com/shivanshshukla021?tab=repositories" target="_blank">Animal Healthcare</a>
+          </h1>
+          <h2>Animal healthcare is an environment for animals that helps us to provide all the facilities to
+            animals at one place.</h2>
         </div>
       </div>
 
@@ -137,66 +91,89 @@
       <div class="skills">
 
         <div class="skill-row">
-          <img class="img2" src="images/12.jpeg" alt="">
-          REACT-JS/MONGODB/EXPRESS=JS/NODE-JS
-
+          <img class="img1" src="images/3.png" alt="">
+          <h1> <a href="https://github.com/shivanshshukla021/whatsApp-nitify" target="_blank">WharsApp Remainder App</a>
+          </h1>
+          <h2>Created a reminder app where you can add a reminder on a particular time</h2>
         </div>
+        <div class="skill-row">
+          <img class="img2" src="images/4.jpeg" alt="">
+          <h1><a href="https://drive.google.com/drive/folders/1Iw7-B2BsUpp8jFTOulUgOiUp2McXpbal?usp=sharing"
+              target="_blank">Live News</a></h1>
+          <h2> Live news that is directly from Times Of India server</h2>
+        </div>
+      </div>
 
 
+      <div class="skill-row">
+        <img class="img1" src="images/5.png" alt="">
+        <h1> <a href="https://github.com/shivanshshukla021/OnlineFOOD-MERN-" target="_blank">Online Food Delivery
+            App</a>
+        </h1>
+        <h2>Created an online food delivery app using MERN STACK where one can order online food</h2>
+      </div>
+    </div>
 
 
+    <div class="in">
+      <div class="skills">
+        <h2 class="skill">INTERNSHIP</h2>
+        <div class="skill-row">
+          <img class="img1" src="images/8.jpeg" alt="">
+          <h3>NIC Delhi</h3>
+          <h2>Worked on JAN PARICHAY MERIPEHCHANOV.IN </h2>
+          <img src="images/6.png" alt="">
+        </div>
+      </div>
 
 
+      <div class="ski">
+        <div class="skills">
+          <h2 class="skill">Skills</h2>
+          <div class="skill-row">
+            <img class="img2" src="images/10.png" alt="">
+            <h2> JAVA</h2>
 
+          </div>
+          <div class="skill-row">
+            <img class="img2" src="images/11.png" alt="">
+            <h2> HTLM/CSS/JAVASCRIPT</h2>
+
+          </div>
+        </div>
 
 
 
         <div class="skills">
-          <h2 class="skill">Coding Experience </h2>
+
           <div class="skill-row">
-            <img class="img2" src="images/21.png" alt="Codechef">
-            <h2><a href="https://www.codechef.com/users/shivansh_02" target="_blank">Codechef</a></h2>
+            <img class="img2" src="images/12.jpeg" alt="">
+            <h2>REACT-JS/MONGODB/EXPRESS=JS/NODE-JS</h2>
 
           </div>
-          <div class="skill-row">
-            <img class="img2" src="images/20.jpg" alt="">
-            <h2> <a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></h2>
-          </div>
-
-
         </div>
 
 
 
 
 
+      </div>
 
 
 
 
 
+      <div class="skills">
+        <h2 class="skill">Coding Experience </h2>
+        <div class="skill-row">
+          <img class="img2" src="images/21.png" alt="Codechef">
+          <h2><a href="https://www.codechef.com/users/shivansh_02" target="_blank">Codechef</a></h2>
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+        </div>
+        <div class="skill-row">
+          <img class="img2" src="images/20.jpg" alt="">
+          <h2> <a href="https://www.hackerrank.com/dashboard" target="_blank">Hackerrank</a></h2>
+        </div>
 
 
 
